Chore: Created main.css and updated hello.html for testing purpose

--- a/src/hango/static/hello.html
+++ b/src/hango/static/hello.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Hello</title>
+    <link rel="stylesheet" href="/static/main.css" />
   </head>
   <body>
     <p>This is a static html file to be returned</p>
