Chore: Added app.js and modified hello.html for testing

--- a/src/hango/static/hello.html
+++ b/src/hango/static/hello.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <p>This is a static html file to be returned</p>
+    <script src="/static/app.js"></script>
   </body>
 </html>
